WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285058
[Cleanup] Do not use overridingLogicalHeight() to signal when percent resolution is allowed
https://bugs.webkit.org/show_bug.cgi?id=285058
Summary
[Cleanup] Do not use overridingLogicalHeight() to signal when percent resolut...
alan
Reported
2024-12-20 20:44:03 PST
ssia
Attachments
[fast-cq]Patch
(8.43 KB, patch)
2024-12-20 20:47 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-12-20 20:47:58 PST
Created
attachment 473621
[details]
[fast-cq]Patch
EWS
Comment 2
2024-12-21 08:28:31 PST
Committed
288222@main
(f018a2e3e53b): <
https://commits.webkit.org/288222@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473621
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-12-21 08:29:15 PST
<
rdar://problem/141874962
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug