[Cleanup] Do not use overridingLogicalHeight() to signal when percent resolution is allowed https://bugs.webkit.org/show_bug.cgi?id=285058

Reviewed by Antti Koivisto.

Instead of relying on whether overridingLogicalHeight() is set on the flex item, let's
mark certain phases of flex layout when we can use the flex item to run percent height computation against.

This helps to figure out when to apply these set of rules when flex layout is done by FFC.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::hasAutoHeightOrContainingBlockWithAutoHeight const):
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeChildIntrinsicLogicalWidths const):
(WebCore::RenderFlexibleBox::repositionLogicalHeightDependentFlexItems):
(WebCore::RenderFlexibleBox::canUseFlexItemForPercentageResolution):
(WebCore::RenderFlexibleBox::usedFlexItemOverridingLogicalHeightForPercentageResolution):
(WebCore::RenderFlexibleBox::layoutAndPlaceFlexItems):
(WebCore::RenderFlexibleBox::canUseFlexItemForPercentageResolutionByStyle): Deleted.
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/288222@main